Swagger Docs and API

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "localDb": "Data Source=database.db"
+  },
+  "JwtSettings": {
+    "SecretKey": "ThisIsASecretKeyForJwtBearerWhichIs256BitsLong",
+    "Issuer": "MyApp",
+    "Audience": "MyAppUsers",
+    "ExpiryInMinutes": 60
+  }
 }
